<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Quake Report</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="data_not_found">Data not found!</string>
    <string name="no_internet_connection">No internet connection</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>

    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>

    <!-- Strings For Minimum Data viewed Preference [CHAR LIMIT=30] -->
    <string name="settings_min_data_label">Minimum view data</string>
    <string name="settings_min_dataview_key" translatable="false">min_viewed</string>
    <string name="settings_min_data_view_default" translatable="false">10</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <string name="sort_by">Sort By</string>
    <string name="data_setting">Data Setting</string>
    <string name="about_apps">About</string>
    <string name="short_result">Short</string>
    <string name="action_chat">Chat</string>
    <string name="chat">Chat</string>
    <string name="logout">Logout</string>
    <string name="btn_send">Send</string>
    <string name="chat_notification_title">You have new Messages!</string>
    <string name="chat_notification_contextText">You Have New Message Context</string>
    <string name="chat_notifcation_body">You Have New Message Body</string>
    <string name="progress_title_default">Please wait...</string>
    <string name="dlg_restoring_chat_session">Restoring chat session…</string>

</resources>
