<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/sort_by">
        <android.support.v7.preference.ListPreference
            android:defaultValue="@string/settings_order_by_default"
            android:entries="@array/settings_order_by_labels"
            android:entryValues="@array/settings_order_by_values"
            android:key="@string/settings_order_by_key"
            android:title="@string/settings_order_by_label" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/data_setting">
        <android.support.v7.preference.EditTextPreference
            android:defaultValue="@string/settings_min_magnitude_default"
            android:inputType="numberDecimal"
            android:key="@string/settings_min_magnitude_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_min_magnitude_label" />

        <android.support.v7.preference.EditTextPreference
            android:defaultValue="@string/settings_min_data_view_default"
            android:inputType="number"
            android:key="@string/settings_min_dataview_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_min_data_label" />
    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>