<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quakereport.EarthquakeActivity">

    <item
        android:id="@+id/action_select"
        android:icon="@drawable/ic_check_box_white_24dp"
        app:showAsAction="always"
        android:title="search"
        />

    <item
        android:id="@+id/action_chat"
        android:title="@string/action_chat" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/short_result" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/settings_menu_item"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about_apps" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout" />

</menu>
